--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,25 @@
 [tool.poetry]
 name = "fracdiff"
-version = "0.9.1"
+# version bump to mark Python 3.12+ support
+version = "0.9.2"
 description = "Super-fast fractional differentiation."
 authors = ["Shota Imaki <shota.imaki.0801@gmail.com>"]
 license = "BSD-3-Clause"
 repository = "https://github.com/fracdiff/fracdiff"
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
-numpy = "^1.24.1"
-scipy = "^1.10.0"
-statsmodels = {git = "https://github.com/statsmodels/statsmodels.git"} # https://github.com/statsmodels/statsmodels/issues/8543
+# allow installation on 3.12 and future 3.x releases
+python = ">=3.9,<3.13"
+numpy = "^1.26.1"
+scipy = "^1.11.0"
+statsmodels = "^0.14.6"
 scikit-learn = {version = "^1.2.1", optional = true}
-torch = {version = "^1.13.1", optional = true}
+torch = { version = "^2.7.0", optional = true, markers = "python_version >= '3.10'" }
 
 [tool.poetry.extras]
 scikit-learn = ["scikit-learn"]
 torch = ["torch"]
+dev = ["scikit-learn", "torch"]
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
@@ -32,8 +35,8 @@ mypy = "^0.991"
 pylint = "^2.11.1"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 skip-magic-trailing-comma = true
