--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ license = "BSD-3-Clause"
 repository = "https://github.com/fracdiff/fracdiff"
 
 [tool.poetry.dependencies]
-# allow installation on 3.12 and future 3.x releases
-python = ">=3.9,<3.13"
-numpy = "^1.26.1"
-scipy = "^1.11.0"
+# allow installation sur Python 3.11+ (compatible scipy 1.17.1 et numpy 2.2.6)
+python = ">=3.11,<3.13"
+numpy = "^2.2.6"
+scipy = "^1.17.1"
 statsmodels = "^0.14.6"
 scikit-learn = {version = "^1.2.1", optional = true}
 torch = { version = "^2.7.0", optional = true, markers = "python_version >= '3.10'" }
